--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html>
     <head>
         <title>My World</title>
-        
+        <link rel="stylesheet" href="style.css" type="text/css" />
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+        <script src="script.js"></script>
     </head>
     <body>
         <h1>
             Welcome To My World
         </h1>
+        <a href="pages/about.html"> link to about me page</a>
     </body>
 </html>
